docs(assets): add favicon from cornicopia logo

--- a/_includes/footer_custom.html
+++ b/_includes/footer_custom.html
@@ -1,4 +1,4 @@
 <p class="text-small text-grey-dk-100 mb-0" style="text-align: center;">
-  © 2025 <a href="https://feastorg.github.io" class="text-grey-dk-100">FEASTorg</a>.  
+  © 2025 <a href="https://feastorg.github.io" class="text-blue-00">FEASTorg</a>.  
   See the corresponding <a href="https://github.com/FEASTorg" class="text-grey-dk-100">GitHub repository</a> for license and source details.
 </p>
